--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.2",
-    "date-fns": "^2.12.0",
     "filesize": "^6.1.0",
     "history": "^4.10.1",
+    "moment": "^2.24.0",
     "polished": "^3.5.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
